--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 	<!--<meta name="_csrf_header" th:content="${_csrf.headerName}">-->
 	<link rel="icon" th:href="@{/img/icon.png}"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/global.css}"/>
 	<title>首页</title>
 </head>
 <body>	
@@ -26,7 +26,7 @@
 								<a class="nav-link" th:href="@{/index}">首页</a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser!=null}">
-								<a th:href="@{/letter/list}" class="nav-link position-relative" >消息<span class="badge badge-danger">12</span></a>
+								<a th:href="@{/letter/list}" class="nav-link position-relative" >消息<span class="badge badge-danger" th:text="${allUnreadCount}">12</span></a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
 								<a class="nav-link" th:href="@{/register}">注册</a>
@@ -39,7 +39,7 @@
 									<img class="rounded-circle"  th:src="${loginUser.getHeaderUrl()}"   style="width:60px;height: 50px"/>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item text-center" >个人主页</a>
+									<a class="dropdown-item text-center" th:href="@{|/user/profile/${loginUser.id}|}">个人主页</a>
 									<a class="dropdown-item text-center" th:href="@{/user/setting}" >账号设置</a>
 									<a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
 									<div class="dropdown-divider"></div>
@@ -119,8 +119,8 @@
 				<ul class="list-unstyled">
 					<!--每次从discussPosts中取出一个map-->
 					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="dis:${discussPosts}">
-						<a href="site/profile.html">
-							<img th:href="@{|/discuss/detail/${dis.post.getId()} |}" th:src="${dis.user.getHeaderUrl()}" class="mr-4 rounded-circle" alt="用户头像" style="width:55px;height:50px;">
+						<a th:href="@{|/user/profile/${dis.user.id}|}">
+							<img  th:src="${dis.user.getHeaderUrl()}" class="mr-4 rounded-circle" alt="用户头像" style="width:55px;height:50px;">
 						</a>
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
@@ -132,7 +132,7 @@
 							<div class="text-muted font-size-12">
 								<u class="mr-3" th:utext="${dis.user.getUsername()}"></u> 发布于 <b th:utext="${#dates.format(dis.post.getCreateTime(),'yyyy-MM-dd HH:mm:ss')}"></b>
 								<ul class="d-inline float-right">
-									<li class="d-inline ml-2">赞 <span >11</span></li>
+									<li class="d-inline ml-2">赞 <span th:text="${dis.likeCount}">11</span></li>
 									<li class="d-inline ml-2">|</li>
 									<li class="d-inline ml-2">回帖 <span th:text="${dis.post.getCommentCount()}"7</span></li>
 								</ul>
