--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" th:href="@{/img/icon.png}"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" th:href="@{/css/global.css}" />
-	<link rel="stylesheet" th:href="@{/css/discuss-detail.css}" />
+	<link rel="stylesheet" th:href="@{/css/global.css}"/>
+	<link rel="stylesheet" th:href="@{/css/discuss-detail.css}"/>
 	<title>帖子详情</title>
 </head>
 <body>
@@ -42,8 +42,8 @@
 							发布于 <b th:text="${#dates.format(post.getCreateTime(),'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
 							<ul class="d-inline float-right">
 								<li class="d-inline ml-2">
-									<a href="#"  class="text-primary">
-										<b >赞</b> <i >11</i>
+									<a href="javascript:;" th:onclick="|like(this,1,${post.getId()},${post.getUserId()},${post.getId()});|"  class="text-primary">
+										<b th:text="${postLikeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${postLikeCount}">11</i>
 									</a>
 								</li>
 								<li class="d-inline ml-2">|</li>
@@ -94,8 +94,8 @@
 								<span>发布于 <b th:text="${#dates.format(cvo.comment.getCreateTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">
-										<a href="javascript:;"  class="text-primary">
-											<b>赞</b>(<i >1</i>)
+										<a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.getId()});|" class="text-primary">
+											<b th:text="${cvo.commentLikeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.commentLikeCount}">1</i>)
 										</a>
 									</li>
 									<li class="d-inline ml-2">|</li>
@@ -119,8 +119,8 @@
 										<span th:text="${#dates.format(rvo.reply.getCreateTime(),'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
 										<ul class="d-inline float-right">
 											<li class="d-inline ml-2">
-												<a href="javascript:;"  class="text-primary">
-													<b >赞</b>(<i >1</i>)
+												<a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.getId()});|" class="text-primary">
+													<b th:text="${rvo.replyLikeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.replyLikeCount}">1</i>)
 												</a>
 											</li>
 											<li class="d-inline ml-2">|</li>
